REC-202: Fix for job preferences screen in setup
- The job preferences main screen was messed up
  on the setup version of the page because the footer
  needs to be there. This fixes this by making things
  smaller when in setup.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -780,6 +780,17 @@ ion-icon.rec-btn-icon {
   margin-bottom: 0px;
 }
 
+.circle-icon-btn.small {
+  width: 12vh;
+  height: 12vh;
+  line-height: 12vh;
+  font-size: 35px !important;
+}
+
+.circle-icon-btn.small ~ h3 {
+  
+}
+
 .rec-load-btn {
   ion-spinner {
     transform: scale(2);
